# SynthAI

./: .gitmodules
SynthHost/: .gitignore  CMakeLists.txt  main.cpp
SynthHost/audio_engine/: HeadlessAudioEngine.cpp  HeadlessAudioEngine.h  SpeakerAudioEngine.cpp  SpeakerAudioEngine.h
SynthHost/audio_engine/utils/: AudioRingBuffer.cpp  AudioRingBuffer.h
SynthHost/controller/: StreamController.cpp  StreamController.h
SynthHost/encoder/: OpusEncoder.h  OpusEncoderWrapper.h
SynthHost/midi/: MidiDeviceManager.cpp  MidiInputCollector.cpp  MidiInputCollector.h
SynthHost/modules/vcpkg/ports/adios2/: portfile.cmake
SynthHost/modules/vcpkg/ports/alsa/: portfile.cmake
SynthHost/modules/vcpkg/ports/ampl-mp/: portfile.cmake
SynthHost/resources/presets/basses/: analog_vibrato_bass.vstpreset  engine_hash.vstpreset  subnet.vstpreset
SynthHost/resources/presets/leads/: module.vstpreset
SynthHost/resources/presets/pads/: blade_swimmer.vstpreset  lala.vstpreset  seconds.vstpreset  visions.vstpreset
SynthHost/resources/presets/plucks/: retrobit.vstpreset  tetra.vstpreset
SynthHost/streaming/: SerumAudioDeviceModule.h  StreamManager.cpp  StreamManager.h  UDPAudioSender.h
SynthHost/utils/: PluginEnum.cpp  PluginEnum.h  StreamID.h  StreamManager.cpp  StreamManager.h  WebSocketClientID.h
SynthHost/utils/serum/: Presets.cpp  Presets.h  SerumEditor.cpp  SerumEditor.h
SynthHost/vst_hosting/: PluginManager.cpp
SynthHost/websocket/: WebSocketClient.cpp  WebSocketClient.h
VSTHost/: CMakeLists.txt  main.cpp
VSTHost/audio_engine/: HeadlessAudioEngine.h  SpeakerAudioEngine.cpp  SpeakerAudioEngine.h
VSTHost/audio_engine/utils/: AudioRingBuffer.cpp
VSTHost/midi/: MidiDeviceManager.h  MidiInputCollector.h
VSTHost/resources/presets/basses/: analog_reese_sweep.fxp  analog_reese_sweep.vstpreset  analog_vibrato_bass.fxp  colony.fxp  colony.vstpreset  engine_hash.fxp  numbernine.fxp  numbernine.vstpreset  offrecord.fxp  offrecord.vstpreset  subnet.fxp  welcome.fxp  welcome.vstpreset
VSTHost/resources/presets/leads/: 1984.fxp  1984.vstpreset  crashwave.fxp  crashwave.vstpreset  cursed_brass.fxp  cursed_brass.vstpreset  ds61.fxp  ds61.vstpreset  legato_saw_lead.fxp  legato_saw_lead.vstpreset  mini.fxp  mini.vstpreset  module.fxp  retro_bass_lead.fxp  retro_bass_lead.vstpreset  sawkraft.fxp  sawkraft.vstpreset  timecop.fxp  timecop.vstpreset
VSTHost/resources/presets/pads/: blade_swimmer.fxp  bless.fxp  bless.vstpreset  lala.fxp  out_to_play.fxp  out_to_play.vstpreset  retrotooth.fxp  retrotooth.vstpreset  seconds.fxp  visions.fxp
VSTHost/resources/presets/plucks/: retrobit.fxp  tetra.fxp
VSTHost/streaming/: SerumAudioDeviceModule.cpp  SerumAudioDeviceModule.h
VSTHost/utils/: PluginEnum.cpp  PluginEnum.h
VSTHost/utils/serum/: Presets.cpp
VSTHost/vst_hosting/: PluginManager.cpp  PluginManager.h
(+867 files in other folders)
